# ckanext-knowledge-assistant

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/knowledge_assistant/: cli.py  config.py  config_declaration.yaml  plugin.py  rag.py
ckanext/knowledge_assistant/assets/: script.js  webassets.yml
ckanext/knowledge_assistant/tests/: test_plugin.py
