[project]
name = "ckanext-knowledge-assistant"
version = "0.0.1"
description = "RAG-based knowledge assistant for CKAN - intelligent semantic search using natural language queries"
readme = "README.md"
authors = [
    {name = "DataShades", email = "datashades@linkdigital.com.au"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

keywords = [ "CKAN", "RAG", "semantic-search", "knowledge-assistant", "llama-index", ]
dependencies = [
    "llama-index-core",
    "llama-index-llms-ollama",
    "llama-index-tools-mcp",
    "llama-index-vector-stores-postgres",
    "llama-index-embeddings-ollama"
]

[project.urls]
Homepage = "https://github.com/DataShades/ckanext-knowledge-assistant"

[project.entry-points."ckan.plugins"]
knowledge_assistant = "ckanext.knowledge_assistant.plugin:KnowledgeAssistantPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W"]
